--- a/css1.css
+++ b/css1.css
@@ -1,48 +1,56 @@
 @charset "utf-8";
 /* CSS Document */
 *{
-box-sizing: border-box;
+	box-sizing: border-box;
 }
 header {
-background-color: black;
+  background-color: white;
 }
-hl{
-}
+
 body {
-}
+    background-image: url("bricks.jpg" width:1080px height:1920px) 
+    background-repeat: repeat; }
 nav {
-width: 100%;
-height: 75px;
-background-color: red;
+  width: 100%;
+  height: 75px;
+  background-color: red;
 }
 .container {
-width: 1200px;	
-height: 960px;
-background-color: yellow;
-margin: 0 auto;
+  width: 1200px;
+  height: 1200px;
+  background-color: black;
+  margin: 0 auto;
 }
 header {
   width: 100%;
-  height: 300px;
-  background-color: red;
+  height: 110px;
+  background-color: white
 }
 section {
-  width: 1200px;
-  height: 300px;
+  width: 110px;
+  height: 1250px;
   margin-top: 20px;
-  background-color: green;
+  background-color: darkgoldenrod;
 }
 article {
-  width: 380px;
-  height: 260px;
+  width: 400px;
+  height: 200px;
 	padding: 10px;
-  background-color: blue;
+  background-color: red;
   float: left;
+  margin: 20px 0px 20px 15px;
+}
+article {
+  width: 400px;
+  height: 200px;
+	padding: 10px;
+  background-color: red;
+  float: right;
   margin: 20px 0px 20px 15px;
 }
 footer {
   width: 100%;
-  height: 80px;
-  background-color: red;
+  height: 100px;
+  background-color: yellow;
   clear: both;
 }
