--- a/css1.css
+++ b/css1.css
@@ -6,10 +6,6 @@
 header {
   background-color: white;
 }
-
-body {
-    background-image: url("bricks.jpg" width:1080px height:1920px) 
-    background-repeat: repeat; }
 nav {
   width: 100%;
   height: 75px;
@@ -21,31 +17,22 @@ nav {
   background-color: black;
   margin: 0 auto;
 }
-header {
-  width: 100%;
-  height: 110px;
-  background-color: white
-}
 section {
-  width: 110px;
-  height: 1250px;
+  width:1150px;
+  height:700px;
   margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-bottom: 20px;
   background-color: darkgoldenrod;
+  align: center
 }
 article {
-  width: 400px;
+  width: 380px;
   height: 200px;
 	padding: 10px;
   background-color: red;
   float: left;
-  margin: 20px 0px 20px 15px;
-}
-article {
-  width: 400px;
-  height: 200px;
-	padding: 10px;
-  background-color: red;
-  float: right;
   margin: 20px 0px 20px 15px;
 }
 footer {
